Wrote some more

--- a/problems.Rmd
+++ b/problems.Rmd
@@ -804,17 +804,17 @@ Why is this important? It is critical to note that *comparing $D_i$ with $D_i \c
 
 $$F(D_i) \otimes F(D_j) = F(D_i \cup D_j) \iff F(D_i \cup D_j) \otimes^{-1} F(D_j) = F(D_i)$$
 
-Specifically, we want some inverse operator $\otimes^{-1}$ that would allow our statistic *to also preserve/distribute over set difference* ($\setminus$). Specifically, we could imagine taking the diagram in Figure \@ref(fig:barplot-preorder2) and adding a second set of arrows pointing in the opposite direction, labeled with $\setminus$. Then, for $F$ to be a functor, it would have to preserve the composition of these set difference arrows as well.
+Specifically, at times, we may also want some inverse operator $\otimes^{-1}$ that would allow our statistic *to also preserve/distribute over set difference* ($\setminus$). Specifically, we could imagine taking the diagram in Figure \@ref(fig:barplot-preorder2) and adding a second set of arrows pointing in the opposite direction, labeled with $\setminus$. Then, for $F$ to be a functor, it would have to preserve the composition of these set difference arrows as well.
 
-Fortunately, we do not have to search for a monoid with an inverse operator; this is precisely the definition of another famous algebraic structure: a group. Groups are well-studied in group theory and subject to many interesting results [see e.g., @pinter2010]. However, for our purposes, a group is just a monoid equipped with the inverse operator $\otimes^{-1}$, subject to:
+Fortunately, we do not have to search for a monoid with an inverse operator; this is precisely the definition of another class of algebraic structures: groups. Groups are well-studied in group theory and subject to many interesting results [see e.g., @pinter2010]. However, for our purposes here, a group is just a monoid equipped with the inverse operator $\otimes^{-1}$, such that:
 
 $$x \otimes y = z \iff (z \otimes^{-1} x = y) \wedge (z \otimes^{-1} y = x)$$
 
-When the inverse operator is not present, we can still compare $D_i$ with $D_i \cup D_j$, however, direct comparisons of $D_i$ and $D_j$ may no longer be possible after combining with $\otimes$. For instance, a typical example of a monoid which lacks inverse is the maximum operator. It is easy to show that maximum is associative:
+When the inverse operator is not present, we can still compare $D_i$ with $D_i \cup D_j$, however, direct comparisons of $D_i$ and $D_j$ may no longer be possible after applying the combination operator $\otimes$. For instance, a typical example of a monoid which lacks inverse is the maximum operator. It is easy to show that maximum is associative:
 
 $$\max(x, \max(y, z)) = \max(\max(x, y), z) = \max(x, y, z)$$
 
-And it also has a neutral element, namely $-\infty$, thus maximum is a valid monoid. However, maximum lacks an inverse $\otimes^{-1}$:
+And it also has a neutral element, namely $-\infty$. Thus maximum is a valid monoid. However, maximum lacks an inverse $\otimes^{-1}$:
 
 $$\not \exists \otimes^{-1} \text{ s. t. } \max(x, y) \otimes^{-1} y = x$$
 
@@ -823,13 +823,19 @@ Thus, for example, if it is the case that:
 
 $$\max(x, y) = 8$$
 
-Then, even if we know that $y = 8$, there is no way to recover the value of $x$. In a certain sense, maximum irretrievably discards some of the information contained in its operands. This is different from generative effects/not preserving composition/lack of associativity, which is about validity: a maximum of maximums is always equal to the maximum of all cases, it is just that there is no meaningful way to reverse the effect of the maximum operator: once we pick the larger value, the smaller is lost. 
+Then, even if we know that $y = 8$, there is no way to recover the value of $x$. In a certain sense, maximum irretrievably discards some of the information contained in its operands. This happens despite the combined value still being a valid summary of the underlying data: due to associativity, a maximum of maximums is always a valid maximum of all cases. However, there is no meaningful way to reverse the effect of the maximum operator: once we pick the larger of two values, the smaller is lost. 
 
-This abstract distinction between groups and monoids, and the presence (absence) of inverses translates into tangible differences in interactive behavior. When implementing linked selection, some interactive systems allow the user to define only a single selection group, whereas others allow multiple. This seemingly minor difference in implementation has a large impact on the kinds of statistics we are able to effectively represent. Specifically, with single-group selection, the user defines a single "special" subset that is then compared against the entirety of the data, i.e. a highlighted subset $D_i$ that is compared against some superset $D_j \supseteq D_i$. Crucially, the "rest" of the data, $D_j \setminus D_i$, plays a secondary role: we only care about it in as much as it contributes to the superset $D_j$. As such, it is enough if the combination operator $\otimes$ is a part of a monoid. However, in multi-group selection, we actually care about comparing the individual disjoint subsets $D_i, D_j, D_k, \ldots$ that result from selection. Thus, we require the inverse operator $\otimes^{-1}$ and $\otimes$ needs to be a part of a group.
+```{r monoids-groups-inverses}
+#| echo: false
+#| fig-cap: "While monoids facilitate the comparison of a single selection groups against the whole data set (or of nested data subsets, more generally), groups allow the display of multiple disjoint selection groups (subsets). The top row shows bars stacked using the sum ($+$) operator, whereas the bottom row shows bars stacked using the maximum operator. The panels left to right show different permutations (orderings) of the selection groups (coloured segments). Notice that, when summing, the presence of the inverse operator guarantees that we can always visually recover all selection groups regardless of their permutation (the blue, red, and green segments are present in all three top-row pannels). Conversely, when taking the maximum, certain permutations may collapse information about the individual subsets, effectively 'hiding' segments (even though the presented information remains a valid summary of the underlying data)."
+knitr::include_graphics("./figures/monoids-groups-inverses.png")
+```
 
-Thus, monoids and groups present two fundamentally different models for linked selection. If we care about using parts of a geometric object to compare some "special" highlighted subset $D_i$ against the subset representing the rest of the data $D_j \supseteq D_i$, then it is enough for the underlying summary statistic to form a monoid. However, if $D_i$ and $D_j$ are disjoint, $D_i \cap D_j = \varnothing$, and we care about comparing $D_i$ and $D_j$ directly, then we also need the inverse operator $\otimes^{-1}$ and the underlying summary needs to be a group.
+The presence (absence) of inverses translates into tangible differences in interactive behavior, see Figure \@ref(fig:monoids-groups-inverses). Specifically, when implementing linked selection, some interactive data visualization systems allow the user to select only a single group, whereas others allow multiple selection groups to be present at the same time. This seemingly superficial implementation details has a significant impact on the kinds of statistics we can display effectively. Specifically, with single-group selection, the user defines a single "special" subset $D_i$ that can be compared against the whole data set $D = D_i \cup \neg D_i$. Crucially, the "rest" of the data set, $\neg D_i$, plays a secondary role: we only care about it in as much as it contributes to the superset $D$. As such, it is enough if the combination operator $\otimes$ forms a monoid. However, in multi-group selection, we actually care about comparing the individual selection groups $D_i, D_j, D_k, \ldots$ as disjoint subsets. Thus, we require the inverse operator $\otimes^{-1}$.
 
-This distinction even has interesting implications for data interpretation. For instance, the reason why the maximum operator works well in Figure \@ref(fig:grammar-barplot-maximums) is because we are comparing a "special subset" of the study participants ("smokers") against that of all participants ("smokers *and* non-smokers"). In other words, with the smoking status variable, it makes sense to compare one category against the union of both categories. This is not the case for all categorical variables, however. For instance, with a gender variable, it would rarely make sense to think of "men" as a special subset of "men and women", or vice versa; the vast majority of time, we are interested in comparing men and women directly, as disjoint subsets. Conversely, this is also the case why monoids work with single-group linked selection: the selected points really are a "special" subset, and the subset representing the "rest" of the data is only interesting in that it is part of "all" of the data points to compare against. However, with multiple selection groups, disjoint comparisons become essential.     
+Therefore, groups and monoids support two fundamentally different modes of selection. If we care about using parts of a geometric object to highlight some "special" subset against the subset representing the rest of the data (or highlighting nested subsets more generally), then it is enough for the underlying summary statistic to form a monoid. However, if we directly want to compare disjoint subsets, then we also need the inverse operator and the underlying summary needs to be a group.
+
+This distinction even has interesting implications for data interpretation more broadly. For instance, the reason why the maximum operator "works" in Figure \@ref(fig:grammar-barplot-maximums) is because we are comparing a special subset of the study participants (smokers) against the subset of all participants (smokers *and* non-smokers). In other words, with the smoking status variable, it makes sense to compare one category against the union of both categories. This is not the case for all categorical variables, however. For instance, with a gender variable, it rarely makes sense to think of men as a special subset of men and women, or vice versa; the vast majority of time, we are interested in comparing men and women directly, as disjoint subsets. Conversely, this is also the case why monoids work with single-group linked selection: the selected points really are a "special" subset, and the subset representing the "rest" of the data is only interesting in that it is part of "all" of the data points to compare against. However, with multiple selection groups, disjoint comparisons become essential.     
 
 #### Other properties: Monotonicity and commutativity {#monotonicity-commutativity}
 
@@ -843,15 +849,15 @@ $$x_1 \leq x_2 \wedge y_1 \leq y_2 \implies x_1 \otimes y_1 \leq x_2 \otimes y_2
 
 Union of disjoint sets is monotonic, in two different ways. First, if we let the comparison operator be set inclusion, $\subseteq$, then it is the case that $A_1 \subseteq A_2 \wedge B_1 \subseteq B_2 \implies A_1 \cup A_2 \subseteq B_1 \cup B_2$. Second, if we let the comparison operator be the comparison of set cardinalities, $A \leq B \implies \lvert A \lvert \leq \lvert B \lvert$, then $\lvert A_1 \lvert \leq \lvert A_2 \lvert \wedge \lvert B_1 \lvert \wedge \lvert B_2 \lvert  \implies \lvert A_1 \cup B_1 \lvert \leq \lvert A_2 \cup B_2 \lvert$ (since $\lvert A \cup B \lvert = \lvert A \lvert + \lvert B \lvert$, by disjointness). 
 
-Likewise, when drawing geometric objects composed of parts, we typically consider the parts to be "less" than the whole, i.e. having a smaller area or length. As discussed in Section \@ref(stacking-part-whole), this has certain advantages: we can use the fact that the quantities corresponding to the parts are bounded by the quantities corresponding to the whole to avoid unnecessary computation. However, there are also examples of geometric objects where the *whole is equal to the sum of its parts, but where the parts are not necessarily "less" than the whole*. As an example, such would be the case for the following visualization of vector addition:
+Likewise, when drawing geometric objects composed of parts, we typically consider the parts to be "less" than the whole, i.e. having a smaller area or length. As discussed in Section \@ref(stacking-part-whole), this has certain advantages: we can use the fact that the quantities corresponding to the parts are bounded by the quantities corresponding to the whole to avoid unnecessary computation. However, there are also examples of geometric objects where the *whole is equal to the sum of its parts, but where the parts are not necessarily "less" than the whole*. As an example, such is the case in the following visualization of vector addition:
 
 ```{r lineplot-monotonicity}
 #| echo: false
-#| fig-cap: "A line graphic of a vector is composed of parts that add up to the whole; however, the cumulative length of the line segments is not monotonically increasing."
+#| fig-cap: "Some geometric representations may form a monoid without exhibiting monotonic growth. The plot shows a line (gray, dashed) formed by adding up three vector segments (red, blue, and green). The operation of concatenating vectors end-to-end is associative (order of concatenation does not change the final endpoint) and unital (zero vector forms the monoidal unit), however, it is not monotonic since the combined vector may be shorter than any of its constituent components."
 knitr::include_graphics("./figures/lineplot-monotonicity.png")
 ```
 
-Figure \@ref(fig:lineplot-monotonicity) represents the summation of three two-dimensional vectors. Vector addition forms a monoid, since for any three vectors $\vec{x}, \vec{y}, \vec{z}$, the addition operation is associative, $(\vec{x} + \vec{y}) + \vec{z} = \vec{x} + (\vec{y} + \vec{z})$, and unital, $\vec{x} + \vec{0} = \vec{0} + \vec{x} = x$ (where $\vec{0}$ is the zero vector). Consequently, the final position reached by summing vectors $\vec{x}$, $\vec{y}$, and $\vec{z}$ is independent of the order of addition. However, vector addition is not monotonic with respect to vector length. In other words, even if it the case that $\lvert \vec{x}_1 \lvert \leq \lvert \vec{x}_2 \lvert \wedge \lvert \vec{y}_1 \lvert \leq \lvert \vec{y}_2 \lvert$, it may not be the case that $\lvert \vec{x}_1 + \vec{y}_1 \lvert \leq \lvert \vec{x}_2 + \vec{y}_2 \lvert$. For instance, if $\vec{x}$ and $\vec{y}$ are opposite vectors of equal magnitude, then their combined length will be 0, which will be less than the combined length of any two shorter, non-opposite vectors.
+Figure \@ref(fig:lineplot-monotonicity) shows a line formed by the addition of three two-dimensional vectors. Vector addition forms a monoid, since for any three vectors $\vec{x}, \vec{y}, \vec{z}$, the addition operation is associative, $(\vec{x} + \vec{y}) + \vec{z} = \vec{x} + (\vec{y} + \vec{z})$, and unital, $\vec{x} + \vec{0} = \vec{0} + \vec{x} = x$ (where $\vec{0}$ is the zero vector). Consequently, the final position reached by summing vectors $\vec{x}$, $\vec{y}$, and $\vec{z}$ is independent of the order of addition. However, vector addition is not monotonic with respect to vector length. In other words, even if it the case that $\lvert \vec{x}_1 \lvert \leq \lvert \vec{x}_2 \lvert \wedge \lvert \vec{y}_1 \lvert \leq \lvert \vec{y}_2 \lvert$, it may not be the case that $\lvert \vec{x}_1 + \vec{y}_1 \lvert \leq \lvert \vec{x}_2 + \vec{y}_2 \lvert$. For instance, if $\vec{x}$ and $\vec{y}$ are opposite vectors of equal magnitude, then their combined length will be 0, which will be less than the combined length of any two shorter, non-opposite vectors.
 
 Thus, it is possible to conceive of monoidal statistics and visual representations which are not monotonic, however, these may suffer from some of the same issues discussed in Section \@ref(stacking-part-whole). For instance, in Figure \@ref(fig:lineplot-monotonicity), the segment representing the combined vector does not provide any kind of bound on the segments representing the constituent vectors. As such, if we tried to implement this graphic with interactive features such as linked selection, we would either have to make the axis limits reactive or otherwise infer the maximum possible value they can take. 
 
