--- a/references.bib
+++ b/references.bib
@@ -2635,7 +2635,7 @@
   month		= sep,
   publisher	= {Youtube},
   note		= {[Online; accessed 7. Nov. 2024]},
-  url		= {https://www.youtube.com/watch?v=sWgDk-o-6ZE&list=PLM5v5JsFsgP21eB4z2mIL8upkvT00Tw9B&index=5}
+  url		= {https://www.youtube.com/watch?v=sWgDk-o-6ZE}
 }
 
 @Article{	  parihar2015,
