Wrote some more

--- a/problems.Rmd
+++ b/problems.Rmd
@@ -1179,7 +1179,8 @@ Assuming we have done the work of splitting our data into subsets, summarizing t
 ### Frames {#frames}
 
 Frames or canvases are a key component of the rendering pipeline [see @wilkinson2012; @wilhelm2003]. Put simply, a frame describes a two-dimensional region where the graphical elements which make up a plot are placed. It may be abstracted over the underlying image encoding format (see Section \@ref(graphics-formats)), although some authors also directly refer to a frame as a "set of pixels" [@wilhelm2003]; however, this is what it will ultimately reduce to within the output device (screen or printer). Further, frame dimensions, usually limited by the window/viewport size but not always [see e.g. @wilhelm2003], are often measured in pixels, and scales (see Section \@ref(scales)) provide a mapping from data coordinates to these dimensions.   
-While a single frame may be used to construct and entire plot or even a figure, generally, in most data visualization systems multiple frames are used. For instance, in many data visualization systems, a single plot is composed of multiple semi-transparent frames layered on top of each other, with each frame being responsible for rendering a different class of graphical elements. This layering has several important benefits. First, it simplifies rendering logic, since by rendering different classes of elements in separate layers, rendering order becomes less critical. For instance, in a scatterplot, if we use one layer to render the points, and another, higher-placed layer (greater z-index) to render some annotations, we can be always sure that the annotations will be plotted on top of the points and not vice versa, regardless of the order we render them. Second, layering also allows for greater computational efficiency via strategic updates [@urbanek2011; @wilhelm2008]. For instance, during linked selection, if the user clicks and drags to select a rectangular region, we can do fast updates to the layer rendering the selection rectangle (since re-rendering a single rectangle is cheap) and throttle updates on the layer representing selected objects (since many objects have to be re-rendered, e.g. thousands of points in a scatterplot). Layers representing graphical elements independent of selection, such as axes, do not have to be re-rendered at all.      
+
+While a single frame may be used to construct and entire plot or even a figure, generally, in most data visualization systems multiple frames are used. For instance, in many data visualization systems, a single plot is composed of multiple semi-transparent frames layered on top of each other, with each frame being responsible for rendering a different class of graphical elements. This layering has several important benefits. First, it simplifies rendering logic, since by rendering different classes of elements in separate layers, rendering order becomes less critical. For instance, in a scatterplot, if we use one layer to render the points, and another, higher-placed layer (greater z-index) to render some annotations, we can be always sure that the annotations will be plotted on top of the points and not vice versa, regardless of the order we render them. Second, layering also allows for greater computational efficiency via strategic updates [@urbanek2011; @wilhelm2008]. For instance, during linked selection, if the user clicks and drags to select a rectangular region, we can do fast updates to the layer rendering the selection rectangle (since re-rendering a single rectangle is cheap) and throttle updates on the layer representing selected objects (since many objects have to be re-rendered, e.g. thousands of points in a scatterplot). Layers representing graphical elements independent of selection, such as axes, often do not have to be re-rendered at all.      
 
 @urbanek2011 identifies the following four fundamental graphical layers (ordered from top-most to bottom-most):
 
@@ -1190,15 +1191,13 @@ While a single frame may be used to construct and entire plot or even a figure, 
 
 Additionally, in some data visualization systems, certain elements of the visualization may be rendered out-of-frame entirely. For instance, in web-based interactive visualization frameworks, some elements may be represented via external DOM nodes, e.g. a query pop-up may be represented via an independent `<div>`/`<table>` element. This can simplify rendering logic: for instance, in the case of the query pop-up, we can offload the work of rendering the table to the browser instead of having it to implement it ourselves. Similarly, many GUI platforms (including browsers) provide ready-made interactive inputs, such as buttons or sliders. 
 
-### Graphical elements
+### Geoms
 
-To create a data visualizations, frames need to be populated with graphical elements. These include geometric objects which represent the data directly, such as points, lines, or rectangles, as well as auxiliary graphical elements such as axis breaks and labels, grid-lines, titles, and additional annotations.
+To visualize information, every plot relies on a primary set of graphical elements which directly represent the data. These objects, hereafter referred to as "geoms", are of primary concern as they are essential for identifying trends. They also tend to be the most computationally expensive class of graphical elements to render. This high cost is due to the fact that the number of geoms often scales with the size of the data. For instance, in scatterplots and parallel coordinate plots, the number of geoms is typically equal to the number of rows. Likewise, in categorical plots like barplots and fluctuation diagrams, larger data set size often implies a greater number of unique categories to be rendered. Furthermore, many interactive features, such as zooming, panning, reordering, selection, and parametric interaction affect the visual attributes of geoms (either directly or by modifying the summary statistics underlying the plot), which makes re-rendering a frequent operation.
 
-Geometric objects directly representing the data (which I will call geoms, from here on out) are of primary concern, since these are the most likely cause of rendering bottle-necks: typically, they are the most numerous class of graphical elements as well as the most likely to require re-rendering upon interaction. For instance, in scatterplots and lineplots, the number of geoms equals the number of rows. Likewise, in barplots and fluctuation diagrams, larger data set size often implies a greater number of categories, and as a consequence more objects to be rendered. Furthermore, most interactive features affect the geoms in some way, necessitating re-rendering. For instance, zooming, panning, and reordering affect the objects' position and/or size, while selection and parametric interaction affect the objects internal attributes, as well as the number of objects to render itself.
+As mentioned in Section \@ref(frames), geoms can be rendered in multiple frames stacked vertically in layers. This layering can be used to create more complex visualizations, or to streamline the rendering process. For instance, in data visualization systems such as `ggplot2` [@wickham2016] enable the creation of new visualization types by vertically layering compatible geoms, such as plotting individual points over boxplot boxes. Another popular example is plotting a computed regression fit over scatterplot points. Conversely, in interactive data visualization systems, layering is used to enhance rendering efficiency, by plotting a dynamic highlighting layer on top of a static "base" layer [@urbanek2011]. 
 
-In contrast, auxiliary graphical elements are typically few in number, and require less frequent re-renders. For instance, in a typical plot with continuous axes, there are generally only 4-6 labels for each axis (as an example, in R, the `pretty` function uses `n = 5` as the default number of *desired* intervals used to find axis breaks) and a single title. With two axes, that amounts to just 10-14 text strings (axis labels plus titles) that need to be rendered, which is generally much smaller number than the number of geoms. Additionally, as was mentioned in Section \@(stacking-part-whole), with monoidal plots like stacked barplots and histograms, axis labels do not have be to be re-rendered during linked selection. They *do* need to be re-rendered during zooming and panning, however, this operation will typically be fairly cheap. Axis titles need to be re-rendered only during representation switching, such as when switching from a barplot to spineplot.
-
-#### Rendering: A functor from summary statistics to graphics {#rendering-functor}
+#### Rendering geoms: A functor from summary statistics to graphics {#rendering-functor}
 
 Importantly, just as we can think of aggregation as a functor from the category of data subsets to the category of summary statistics (see Section \@ref(aggregation-functor)), so can we interpret rendering as a functor from the category of summary statistics to the category of graphics or geometric objects (geoms). Specifically, if the statistics underlying the plot form a hierarchy, then so should the geometric objects representing them, and the mapping from one to the other should preserve the inherent structure. 
 
@@ -1207,4 +1206,20 @@ Formally, supposing that $F: \mathcal{D} \to \mathcal{S}$ is a functor from the 
 $$\mathcal{D} \to \mathcal{S} \to \mathcal{G}$$
 
 In more practical terms, this suggests that the geoms representing our data should have a structure which is compatible with that of the summary statistics. If the summary statistics are monoids, then the geoms should be too: they need an "empty" geom and a binary associative operation for merging two geoms into one. For most simple geometric objects, these properties are trivially satisfied. For example, rectangles and circular regions can be combined through stacking or layering, and line segments can be concatenated end-to-end. Importantly, this combination operation does not always necessarily have to involve "summing" underlying values. For instance, when combining two barplot bars, we can "cut off" the excess height of the taller bar and append the resulting segment to the shorter one, or equivalently, draw the shorter bar on top of the taller. When applied to bars sorted by height, this operation is unital and associative, yet does not result in summing the underlying values (see also Section \@ref(groups-inverses)).
+
+### Auxiliary graphical elements {#auxiliary-elements}
+
+Beyond geoms, plots also contain auxiliary graphical elements such as grid lines, axis labels, and ticks. In contrast to geoms, these auxiliary graphical elements are typically fewer in a number and require less frequent re-rendering. For instance, a continuous axis is typically represented by only 4-6 labels (as an example, in R, the `pretty` function uses `n = 5` as the default number of *desired* intervals used to find axis breaks). Thus, rendering two continuous axes requires drawing just 8-12 text strings, which, in many plots, is considerably fewer than the number of geoms. Furthermore, interaction does not always require re-rendering the auxiliary elements. For instance, as was mentioned in Section \@(stacking-part-whole), in monoidal plots like stacked barplots and histograms, axis limits are constant throughout linked selection, and so the axis labels do not need to be re-rendered. While other types of interactions, such as zooming and panning, do require re-rendering of axis labels, this is usually still relatively inexpensive when compared to the rendering of geoms. Finally, some auxiliary graphical elements require little to no re-rendering. For instance, the only time when axis titles need to be re-rendered is during representation switching, such as when transforming a barplot to a spineplot.
+
+For many auxiliary graphical elements derive all of the required information from the plot scales. For instance, axis labels, ticks, and grid lines can be obtained from the x- and y-scales. Axis titles are also often specified during scale construction or inferred from the data if not explicitly set. Beyond that, many data visualization systems also allow users to insert custom primitives such as text annotations, polygons, or lines. These can be used to enhance the visualization: for instance, polygons can be used as ribbons to highlight specific data ranges, and lines can be used to show trend lines computed from an arbitrary statistical model. However, it is important to note that, in interactive data visualization systems, due to being provided externally, these auxiliary graphical elements cannot be integrated with data-dependent interactions such as linked selection. 
+
+## Summary
+
+Creating data visualizations involves a complex series of steps which together form the data visualization pipeline. This pipeline typically includes partitioning the data into subsets, computing summary statistics on these subsets, scaling these summaries and encoding them as visual attributes, and finally rendering them as geometric objects. Interactivity can affect all four stages of this process, and any resulting changes need to be propagated appropriately.
+
+Importantly, a key point I have made throughout this section is that the four steps of the data visualization are not independent, of each other or of user interaction. Specifically, the geometric objects we draw need to be congruent with the summary statistics computed on the underlying data, as well as with any interactions we may wish to incorporate. In other words, what we can *do* with our visualization is fundamentally determined by what the visualization *is*. This perspective goes against the model established in the Grammar of Graphics [@wilkinson2012], which views plots as composed out of independent, modular components. 
+
+
+
+
 
